--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,5 @@
     "checkJS": true,
     "lib": ["ES5"],
   },
-  "include": ["index.d.ts.", "server.js"]
+  "include": ["index.d.ts", "server.js"]
 }
